Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/good/InvalidDataFormatterException.java
package org.example.OCP.good;

public class InvalidDataFormatterException extends Throwable {
}
