Week 1 - SOLID Principles/solid/src/main/java/org/example/OCP/bad/XMLEncoder.java
package org.example.OCP.bad;

public class XMLEncoder extends DataEncoder{
}
